# tmuxy

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Justfile  README.md  default_config.toml
src/: args.rs  config.rs  lib.rs  main.rs
templates/: README.md
wix/: main.wxs
