[package]
name = "tmuxy"
version = "0.1.0"
edition = "2021"

[dependencies]
bounded-integer = { version = "0.5.7", features = ["macro", "serde1"] }
clap = { version = "4.5.26", features = ["derive", "env", "string"] }
color-eyre = "0.6.3"
directories = "6.0.0"
lazy_static = "1.5.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
